Spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ body {
   flex-direction: column;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 35px;
   color: white;
   background: linear-gradient(to bottom, #151515, #02090b);
 }
@@ -357,6 +358,9 @@ body {
 
   .cave-container {
     height: 75vh;
+  }
+  .features-container {
+    padding-top: 50px;
   }
   .btn-container {
     display: flex;
